deploy/proxy_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy-shop
  name: happy-kids-api
  namespace: skillkamp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3030
  selector:
    app: proxy-shop
status:
  loadBalancer: {}
